# cutf8

./: .gitignore  CMakeLists.txt
cutf8/: CMakeLists.txt  converter.cpp  converter.h  cutf8.cpp  cutf8.h
src/: CMakeLists.txt  converter.cpp  cutf8.cpp
src/include/: converter.h  cutf8.h
test/: test.cpp
